don't know when an overflow-y problem creeped in again, but squash that silly IE bug

--- a/public_html/layout/nouveau/ie7.css
+++ b/public_html/layout/nouveau/ie7.css
@@ -2,6 +2,7 @@
 This file only contains CSS fixes for the IE 7 browser. For regular style info use style.css
 NOTE: paths specified below are relative to this file
  */
+* {overflow-y:hidden;}
 
 #gl_mooticker ul {
   margin:0 0 5px 120px;
